--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "date-fns": "^2.26.0",
-    "google-map-react": "^2.1.10",
+    "export-to-csv": "^0.2.1",
+    "papaparse": "^5.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-drop-zone": "^4.3.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "s": "^1.0.0",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
@@ -56,6 +59,7 @@
     ]
   },
   "devDependencies": {
-    "@types/google-map-react": "^2.1.3"
+    "@types/google-map-react": "^2.1.3",
+    "@types/papaparse": "^5.3.1"
   }
 }
