--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.2.1",
     "@react-google-maps/api": "^2.7.0",
     "@testing-library/jest-dom": "^5.15.1",
