--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/react": "^4.2.1",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -13,6 +14,8 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.2.1",
+    "@nivo/bar": "^0.79.1",
+    "@nivo/core": "^0.79.0",
     "@react-google-maps/api": "^2.7.0",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
@@ -24,6 +27,7 @@
     "axios": "^0.24.0",
     "date-fns": "^2.26.0",
     "export-to-csv": "^0.2.1",
+    "nivo": "^0.31.0",
     "papaparse": "^5.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
